--- a/xLib-V100.csproj
+++ b/xLib-V100.csproj
@@ -59,6 +59,9 @@
       <Version>9.0.0</Version>
     </PackageReference>
     <PackageReference Include="MQTTnet" Version="4.3.3.952" />
+    <PackageReference Include="Newtonsoft.Json">
+      <Version>13.0.3</Version>
+    </PackageReference>
     <PackageReference Include="System.Buffers" Version="4.6.0" />
     <PackageReference Include="System.Memory" Version="4.6.0" />
     <PackageReference Include="System.Numerics.Vectors" Version="4.6.0" />
